<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:padding="15dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="8dp">

    <RelativeLayout
        android:id="@+id/root_layout_cv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fondo_items"
        android:padding="10dp">

        <TextView
            android:id="@+id/tvAmountLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvCategory"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:gravity="center_vertical"
            android:text="@string/amount_label_text"
            android:textColor="#006064" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTitle"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:gravity="center_vertical"
            android:text="@string/date_text"
            android:textColor="#006064"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:gravity="center_vertical"
            android:text="@string/title_text"
            android:textColor="#006064"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvDate"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:gravity="center_vertical"
            android:text="@string/type_text"
            android:textColor="#006064" />

        <TextView
            android:id="@+id/tvCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvType"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:gravity="center_vertical"
            android:text="@string/cat_text"
            android:textColor="#006064" />

        <TextView
            android:id="@+id/tvAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvCategory"
            android:layout_marginEnd="5dp"
            android:layout_toEndOf="@id/tvAmountLabel"
            android:gravity="center_vertical"
            android:text="@string/amount_text"
            android:textColor="#006064"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/ivTickets"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/desc_image"
            app:srcCompat="@mipmap/ic_launcher_round"
            tools:ignore="ImageContrastCheck" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>