<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutCategories"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btRefresh"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="REFRESH"
        app:layout_constraintStart_toEndOf="@+id/btCatEdit"
        app:layout_constraintTop_toBottomOf="@+id/lvListOfCatg" />

    <Button
        android:id="@+id/btCatAdd"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/add_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lvListOfCatg" />

    <Button
        android:id="@+id/btCatEdit"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/edit_text"
        app:layout_constraintStart_toEndOf="@+id/btCatAdd"
        app:layout_constraintTop_toBottomOf="@+id/lvListOfCatg" />

    <ListView
        android:id="@+id/lvListOfCatg"
        android:layout_width="match_parent"
        android:layout_height="530dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDelCat"
        android:layout_width="148dp"
        android:layout_height="48dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="12dp"
        android:background="#EF5350"
        android:gravity="center"
        android:padding="2dp"
        android:text="@string/del_text"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/btRefresh"
        app:layout_constraintTop_toBottomOf="@+id/lvListOfCatg" />
</androidx.constraintlayout.widget.ConstraintLayout>